# OOP-exercise-

./: calculate_salaries.py  main.py  pyproject.toml
